start refactoring ware