@@ -4,7 +4,9 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.wms.location.application.LocationService;
 import com.wms.location.domain.exception.LocationException;
 import com.wms.location.domain.model.Location;
+import com.wms.location.domain.model.LocationConnection;
 import com.wms.location.domain.model.LocationType;
+import com.wms.location.dto.LocationConnectionDTO;
 import com.wms.location.dto.LocationDTO;
 import com.wms.location.dto.LocationWithConnectionsDTO;
 import org.junit.jupiter.api.DisplayName;
@@ -16,6 +18,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -43,8 +46,20 @@ class LocationControllerTest {
 	@DisplayName("POST /locations - 위치 생성 요청을 성공하고 201 Created를 반환한다.")
 	void createLocation_Success() throws Exception {
 		// given
-		var requestDto = new LocationDTO.createReq("창고A", LocationType.WAREHOUSE, 100);
-		var mockLocation = new Location("창고A", LocationType.WAREHOUSE, 100);
+		var requestDto = LocationDTO.createReq.builder()
+				.name("창고A")
+				.type(LocationType.WAREHOUSE)
+				.capacity(100)
+				.coordinateX(100)
+				.coordinateY(100)
+				.build();
+		var mockLocation = Location.builder()
+				.name("창고A")
+				.type(LocationType.WAREHOUSE)
+				.capacity(100)
+				.coordinateX(100)
+				.coordinateY(100)
+				.build();
 
 		given(locationService.createLocation(any(LocationDTO.createReq.class))).willReturn(mockLocation);
 
@@ -60,7 +75,7 @@ class LocationControllerTest {
 	@DisplayName("POST /locations - 유효성 검증 실패 시 400 Bad Request를 반환한다.")
 	void createLocation_WithInvalidInput_ReturnsBadRequest() throws Exception {
 		// given
-		var invalidRequestDto = new LocationDTO.createReq("", null, null); // Name, Type이 비어있음
+		var invalidRequestDto = new LocationDTO.createReq("", null, null, null, null); // Name, Type이 비어있음
 
 		// when & then
 		mockMvc.perform(post("/locations")
@@ -73,44 +88,125 @@ class LocationControllerTest {
 	@DisplayName("GET /locations - 모든 위치 목록을 조회하고 200 OK를 반환한다.")
 	void getLocations_Success() throws Exception {
 		// given
-		var locationList = List.of(new Location("창고A", LocationType.WAREHOUSE, 100));
+		var mockLocation1 = Location.builder()
+				.name("창고A")
+				.type(LocationType.WAREHOUSE)
+				.capacity(100)
+				.coordinateX(100)
+				.coordinateY(100)
+				.build();
+		var mockLocation2 = Location.builder()
+				.name("입고처A")
+				.type(LocationType.INBOUND)
+				.coordinateX(100)
+				.coordinateY(100)
+				.build();
+
+		var locationList = List.of(mockLocation1, mockLocation2);
 		given(locationService.getLocations()).willReturn(locationList);
 
 		// when & then
 		mockMvc.perform(get("/locations"))
 				.andExpect(status().isOk())
 				.andExpect(jsonPath("$[0].name").value("창고A"))
-				.andExpect(jsonPath("$.length()").value(1));
+				.andExpect(jsonPath("$[0].capacity").value(100))
+				.andExpect(jsonPath("$[1].name").value("입고처A"))
+				.andExpect(jsonPath("$[1].capacity").doesNotExist()) // null 대신 doesNotExist() 사용
+				.andExpect(jsonPath("$.length()").value(2));
 	}
 
 	@Test
 	@DisplayName("GET /locations/type/{type} - 특정 타입의 위치 목록을 조회하고 200 OK를 반환한다.")
 	void getLocationsByType_Success() throws Exception {
-		// given
-		var warehouseLocations = List.of(new Location("창고A", LocationType.WAREHOUSE, 100));
-		given(locationService.getLocationsByType(LocationType.WAREHOUSE)).willReturn(warehouseLocations);
+		// Given
+		LocationType type = LocationType.WAREHOUSE;
+		List<Location> locations = Arrays.asList(
+				Location.builder()
+						.name("창고A")
+						.type(LocationType.WAREHOUSE)
+						.capacity(100)
+						.coordinateX(100)
+						.coordinateY(100)
+						.build(),
+				Location.builder()
+						.name("창고B")
+						.type(LocationType.WAREHOUSE)
+						.capacity(200)
+						.coordinateX(200)
+						.coordinateY(200)
+						.build()
+		);
+
+		given(locationService.getLocationsByType(LocationType.WAREHOUSE)).willReturn(locations);
 
 		// when & then
 		mockMvc.perform(get("/locations/type/{type}", LocationType.WAREHOUSE))
 				.andExpect(status().isOk())
+				.andExpect(jsonPath("$[0].name").value("창고A"))
 				.andExpect(jsonPath("$[0].type").value("WAREHOUSE"))
-				.andExpect(jsonPath("$.length()").value(1));
+				.andExpect(jsonPath("$[0].capacity").value(100))
+				.andExpect(jsonPath("$.length()").value(2));
 	}
 
 	@Test
 	@DisplayName("GET /locations/{id} - 특정 위치와 연결 정보를 조회하고 200 OK를 반환한다.")
 	void getLocation_Success() throws Exception {
-		// given
-		var dto = new LocationWithConnectionsDTO(1L, "창고A", LocationType.WAREHOUSE, 100, LocalDateTime.now(), LocalDateTime.now(), Collections.emptyList());
+// given
+		Location locA = Location.builder()
+				.name("창고A")
+				.type(LocationType.WAREHOUSE)
+				.capacity(100)
+				.coordinateX(100)
+				.coordinateY(100) // coordinateX가 중복되어 있었음
+				.build();
+		Location locB = Location.builder()
+				.name("창고B")
+				.type(LocationType.WAREHOUSE)
+				.capacity(100)
+				.coordinateX(200)
+				.coordinateY(200)
+				.build();
+		Location locC = Location.builder()
+				.name("출고처")
+				.type(LocationType.OUTBOUND)
+				.capacity(null)
+				.coordinateX(300)
+				.coordinateY(300)
+				.build();
+
+		LocationConnectionDTO.Res locationConnectionAandB = LocationConnectionDTO.Res.builder()
+				.locationAId(1L) // Location 객체.getId() 는 Entity가 영속화되지 않았기 때문에 null일 수 있으므로 직접 ID 값 사용 `locA.getId()`
+				.locationBId(2L)
+				.trt(50)
+				.build();
+		LocationConnectionDTO.Res locationConnectionAandC = LocationConnectionDTO.Res.builder()
+				.locationAId(1L)
+				.locationBId(3L)
+				.trt(20)
+				.build();
+
+		var dto = new LocationWithConnectionsDTO(
+				1L,
+				"창고A",
+				LocationType.WAREHOUSE,
+				100,
+				LocalDateTime.now(),
+				LocalDateTime.now(),
+				List.of(locationConnectionAandB, locationConnectionAandC)
+		);
 		given(locationService.getLocationWithConnections(1L)).willReturn(dto);
+
 
 		// when & then
 		mockMvc.perform(get("/locations/{id}", 1L))
 				.andExpect(status().isOk())
 				.andExpect(jsonPath("$.id").value(1L))
 				.andExpect(jsonPath("$.name").value("창고A"))
-				.andExpect(jsonPath("$.connections").isArray());
+				.andExpect(jsonPath("$.connections").isArray())
+				.andExpect(jsonPath("$.connections.length()").value(2));
 	}
+
+
 
 	@Test
 	@DisplayName("GET /locations/{id} - 존재하지 않는 위치 ID로 조회 시 404 Not Found를 반환해야 한다.")
@@ -128,8 +224,21 @@ class LocationControllerTest {
 	@DisplayName("PUT /locations/{id} - 위치 정보를 수정하고 200 OK를 반환한다.")
 	void updateLocation_Success() throws Exception {
 		// given
-		var requestDto = new LocationDTO.updateReq("수정된 창고", LocationType.WAREHOUSE, 200);
-		var updatedLocation = new Location("수정된 창고", LocationType.WAREHOUSE, 200);
+		var requestDto = LocationDTO.updateReq.builder()
+				.name("수정된 창고")
+				.capacity(200)
+				.coordinateX(100)
+				.coordinateY(100)
+				.build();
+
+		var updatedLocation = Location.builder()
+				.name("수정된 창고")
+				.type(LocationType.WAREHOUSE)
+				.capacity(200)
+				.coordinateX(100)
+				.coordinateY(100)
+				.build(); //
+
 
 		given(locationService.updateLocation(eq(1L), any(LocationDTO.updateReq.class))).willReturn(updatedLocation);
 
